css/mobile.css
@keyframes slideInFromBottom {
    0% {
      -webkit-transform: translateY(25%);
      -moz-transform: translateY(25%);
      -ms-transform: translateY(25%);
      -o-transform: translateY(25%);
      transform: translateY(25%);
      opacity: 0.1;
    }
    100% {
      -webkit-transform: translateY(0);
      -moz-transform: translateY(0);
      -ms-transform: translateY(0);
      -o-transform: translateY(0);
      transform: translateY(0);
      opacity: 1;
    }
  }
  
  
  @keyframes slideSide {
    0% {
      transform: translateX(0%);
      opacity: 1;
    }
    100% {
      transform: translateX(4%);
      opacity: 1;
    }
  }
  
  
  blue {
   background-color: #b4b9fd;
   padding-top: -16px;
   padding-bottom: -16px;
   padding: 6px;
   border-radius: 10px;
   color: white;
  }
  
  ::selection {
    background: #b4b9fd; /* WebKit/Blink Browsers */
    color: #FFFFFF;
  }
  ::-moz-selection {
    background: #b4b9fd; /* Gecko Browsers */
    color: #FFFFFF;
  }
  
    body {
      background-color: #FFFFFF;
      margin: 0;
    }
  
    .logo {
      margin: 10em;
      height: 5em;
      width: 5em;
    }
  
    .logo img {
      height: 5em;
      width: 5em;
    }

    .portfolio__container {
      max-width: 80%;
      margin: 50px auto; }
      @media screen and (min-width: 61.875em) {
        .portfolio__container {
          max-width: 1000px;
          margin: 150px auto; } 
      }
      @media screen and (min-width: 46.875em) and (max-width: 61.8125em) {
        .portfolio__container {
          max-width: 750px;
          margin: 150px auto; } 
      }
  
    .heading {
      animation: 0.6s ease-in-out 0s 1 slideInFromBottom;
      font-family: 'Product Sans', sans-serif;
      color: #616161;
      font-size: 4em;
      font-weight: 700;
      line-height: 1.3em;
      margin-bottom: 0.5em;
      margin-left: 1em;
      margin-top: 4em;
      margin-right: 1em;
      padding-bottom: 1em;
    }
  
    .heading h2 {
      font-family: 'Product Sans', sans-serif;
      color: #7a7a7a;
      font-weight: 1;
      font-size: 0.5em;
      line-height: 1.5em;
      text-align: left;
      padding-top: 2em;
      margin: auto;
    }
  
    a {
      color: #b4b9fd;
      font-size: inherit;
      font-weight: inherit;
      text-decoration: none;
    }

    a:visited {
      text-decoration: none;
      outline: none;
    }
  
    a:hover{
      color: #8c94ff;
    }
  
    .icons {
        animation: 0.7s ease-in-out 0s 1 slideInFromBottom;
        color: #616161;
        font-family: 'Product Sans', sans-serif;
        font-size: 42px;
        letter-spacing: 14px;
        margin-left: -1px;
        padding-top: 1.5em;
        text-align: left;
      }

    .icons a {
        color: #616161;
        font-size: inherit;
        font-weight: inherit;
        text-decoration: none;
    }

    .icons a:hover{
        color: #D4D7FE;
    }
  
    .project__wrapper {
      animation: 0.8s ease-in-out 0s 1 slideInFromBottom;
      display: flex;
      justify-content: center;
      flex-wrap: wrap;
    }

    .project__wrapper a{
      text-decoration: none;
    }
    
    .project {
      display: flex;
      height: 290px;
      width: 747px;
      margin: 50px auto;
      border-radius: 7px 7px 7px 7px;
      /* VIA CSS MATIC https://goo.gl/cIbnS */
      -webkit-box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
      -moz-box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
      box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
    }

    .project:hover, .project:focus, .project:active {
      transform: scale(1.08);
    }

    .project-img {
      display: flex;
      float: left;
      height: 327px;
      width: 420px;
    }

    .project-img img {
      border-radius: 7px 0 0 7px;
      object-fit: cover;
    }

    .project-info {
      float: left;
      height: 290px;
      width: 327px;
      border-radius: 0 7px 10px 7px;
      background-color: #ffffff;
    }

    .project-text {
      height: 300px;
      width: 290px;
    }

    .project-text:a {
      text-decoration: none;
    }

    .project-text h1 {
      margin: 0 0 0 38px;
      padding-top: 52px;
      font-size: 34px;
      color: #474747;
    }

    .project-text h1,
    .project-price-btn p {
      font-family: 'Product Sans', serif;
    }

    .project-text h2 {
      margin: 0 0 10px 38px;
      font-size: 13px;
      line-height: 3em;
      font-family: 'Product Sans', sans-serif;
      font-weight: 400;
      text-transform: lowercase;
      color: #616161;
      letter-spacing: 0.2em;
      white-space: nowrap;
    }

    .project-text p {
      height: 125px;
      padding-top: -3em;
      margin: 0 0 0 38px;
      font-family: 'Product Sans', serif;
      color: #8d8d8d;
      font-size: 15px;
      font-weight: lighter;
    }

    .back_to_home {
      background: none;
      border: none; /* Remove borders */
      padding: 10px; /* Some padding */
      font-size: 24px; /* Set a font size */
      cursor: pointer; /* Mouse pointer on hover */
      margin-left: 2em;
      position: absolute;
      top: 2em;
      left: 0em;
      z-index: 8;
      display: block;
      color: #474747;
    }

    .back_to_home:hover{
      color: #b4b9fd;
    }

    .header {
      top: 0;
      width: 100%;
      background: white;
    }

    .header img {
      overflow: hidden;
      height: 35em;
      width: 100%;
      object-fit: cover;
      z-index: -4;
    }

    .tight-container h1 {
      animation: 0.6s ease-in-out 0s 1 slideInFromBottom;
      display: table;
      font-family: 'Product Sans', sans-serif;
      color: #333333;
      font-size: 3em;
      letter-spacing: 2px;
      line-height: 1em;
    }

    .case {
      display: inline;
      animation: 0.6s ease-in-out 0s 1 slideInFromBottom;
      font-size: 1.1em;
      font-family: 'Product Sans', sans-serif;
      font-weight: 300;
      color: #616161;
      margin: 15px 0;
      line-height: 2em;
    }

    .case img {
      width: 100%;
      overflow: hidden;
      height: auto;
      width: 90%;
      margin-left: 5%;
      object-fit: cover;
    }

    .coming:hover {
      transition: 0.4s;
      color: #61616188;
    }

    .tight-container {
      max-width: 750px;
      margin: 0 auto 30px auto;
    }

    .tight-container h2 {
      font-family: 'Product Sans', sans-serif;
      animation: 0.6s ease-in-out 0s 1 slideInFromBottom;
      color: #616161;
      font-size: 2em;
      line-height: 1em;
    }

    .tight-container h3 {
      font-family: 'Product Sans', sans-serif;
      animation: 0.6s ease-in-out 0s 1 slideInFromBottom;
      color: #616161;
      font-size: 2em;
      line-height: 1em;
      margin-left: 80%;
    }

    h3:hover {
      transition: 0.4s;
      transform: scale(1.08);
      transform: translateX(5%);
    }

    iframe {
      display: flex;
      margin-left: 20%;
    }

    .caption-container {
      max-width: 300px;
      text-align: center;
      margin: 0 auto 30px auto;
      animation: 0.6s ease-in-out 0s 1 slideInFromBottom;
      font-size: 14px;
      font-family: 'Product Sans', sans-serif;
      font-weight: 300;
      color: #999999;
      line-height: 2em;
      font-style: italic;
    }

    footer {
      background-color: #0C3B62;
      color: #FFFFFF;
      font-family: 'Product Sans', sans-serif;
      font-size: 1em;
      padding: 10em;
      padding-top: 3em;
      padding-bottom: 3em;
      text-align: left;
      margin-top: 12em;
    }

